--- a/PersonalSite/PersonalSite.csproj
+++ b/PersonalSite/PersonalSite.csproj
@@ -156,10 +156,9 @@
     <Content Include="images\gallery\gallery5.jpg" />
     <Content Include="images\gallery\gallery6.jpg" />
     <Content Include="images\graverter.jpg" />
-    <Content Include="images\ico\apple-touch-icon-114-precomposed.png" />
-    <Content Include="images\ico\apple-touch-icon-144-precomposed.png" />
-    <Content Include="images\ico\apple-touch-icon-57-precomposed.png" />
-    <Content Include="images\ico\apple-touch-icon-72-precomposed.png" />
+    <Content Include="images\ico\apple-touch-icon.png" />
+    <Content Include="images\ico\favicon-16x16.png" />
+    <Content Include="images\ico\favicon-32x32.png" />
     <Content Include="images\ico\favicon.ico" />
     <Content Include="images\image_bg.png" />
     <Content Include="images\image_of_me.jpg" />
